mobile responsive screen fixed

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,7 @@ code {
 .nav_item:hover {
   background-color: #1976d2 !important;
 }
+.css-rzewj {
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
+}
